--- a/進度.md
+++ b/進度.md
@@ -1,3 +1,5 @@
 |function name|parameter|return|
 |:---:|:---:|:---:|
-||pcl::PointCloud\<pcl::PointXYZ\>|pcl::PolygonMesh
+||pcl::PointCloud\<pcl::PointXYZ\>|void|
+||pcl::PolygonMesh|void|
+
