--- a/file/進度.md
+++ b/file/進度.md
@@ -1,5 +1,5 @@
-|function name	|parameter							|return|
-|:---:			|:---:								|:---:|
-|				|pcl::PointCloud\<pcl::PointXYZ\>	|void|
-|				|pcl::PolygonMesh					|void|
+|function name		|parameter								|return				|完成時間		|
+|:---:				|:---:									|:---:				|:---:			|
+|					|pcl::PointCloud\<pcl::PointXYZ\>		|void|				|				|
+|					|pcl::PolygonMesh						|void|				|				|
 
