--- a/file/進度.md
+++ b/file/進度.md
@@ -1,5 +1,10 @@
-|function name		|parameter								|return				|完成時間		|
-|:---:				|:---:									|:---:				|:---:			|
-|					|pcl::PointCloud\<pcl::PointXYZ\>		|void|				|				|
-|					|pcl::PolygonMesh						|void|				|				|
-
+|類型			|名稱				|parameter								|return				|完成時間		|
+|:---:			|:---:				|:---:									|:---:				|:---:			|
+|function		|					|pcl::PointCloud\<pcl::PointXYZ\>		|void				|				|
+|function		|					|pcl::PolygonMesh						|void				|				|
+|測試			|					|										|					|				|
+|				|					|										|					|				|
+|				|					|										|					|				|
+|				|					|										|					|				|
+|				|					|										|					|				|
+|				|					|										|					|				|
