--- a/file/進度.md
+++ b/file/進度.md
@@ -1,10 +1,11 @@
 Queue
-	使用樣板的library
+	(未完成)使用樣板的library
 OpenGL	http://axdc11239.blogspot.tw/2012/03/opengl.html
 	
-	可繪製pcl::PointCloud\<pcl::PointXYZ\>之function回傳void
-	可繪製pcl::PolygonMesh之functionc回傳void
-	滑鼠拖曳
-	滑鼠選點
+	(未完成)可繪製pcl::PointCloud\<pcl::PointXYZ\>之function回傳void
+	(未完成)可繪製pcl::PolygonMesh之functionc回傳void
+	(未完成)滑鼠控制Camera
+	(未完成)滑鼠選點
+	(20180511)鍵盤控制Camera
 PCL
 	
