--- a/file/進度.md
+++ b/file/進度.md
@@ -6,6 +6,7 @@ OpenGL	http://axdc11239.blogspot.tw/2012/03/opengl.html
 	(20180512)滑鼠控制Camera
 	(未完成)滑鼠選點
 	(20180511)鍵盤控制Camera
+	Camera物件化
 PCL
 
 PCD
