--- a/file/進度.md
+++ b/file/進度.md
@@ -7,7 +7,17 @@ OpenGL	http://axdc11239.blogspot.tw/2012/03/opengl.html
 	(未完成)滑鼠選點
 	(20180511)鍵盤控制Camera
 	Camera物件化
+	(20180512)固定文字
+	(20180512)物件陰影(有BUG)
 PCL
 
 PCD
 	尋找連續的點雲圖
+
+
+DataStructure
+	kdTree
+	vector
+Algorithm	
+	surface triangulation algorithm
+Sort
