--- a/file/進度.md
+++ b/file/進度.md
@@ -1,23 +1,30 @@
 Queue
-	(未完成)使用樣板的library
+	(20180512)	使用樣板的library		內建有了
+	(未完成)	結合queue及viewer
+	(未完成)	移除cloud和triangle的全域變數 形成triangle後丟置queue裡面
 OpenGL	http://axdc11239.blogspot.tw/2012/03/opengl.html
-	(未完成)可繪製pcl::PointCloud\<pcl::PointXYZ\>之function回傳void
-	(未完成)可繪製pcl::PolygonMesh之functionc回傳void
-	(20180512)滑鼠控制Camera
-	(未完成)滑鼠選點
-	(20180511)鍵盤控制Camera
 	Camera物件化
-	(20180512)固定文字
-	(20180512)物件陰影(有BUG)
+	(未完成)	滑鼠選點
+	(20180512)	可繪製pcl::PointCloud\<pcl::PointXYZ\>之function回傳void
+	(20180512)	可繪製pcl::PolygonMesh之functionc回傳void
+		(20180512)	傳入值去掉pcl::PointCloud\<pcl::PointXYZ\> pcl::PolygonMesh裡面有
+	(20180512)	滑鼠控制Camera		拖曳加滾輪
+	(20180511)	鍵盤控制Camera		WSAD ↑↓←→
+	(20180512)	固定文字
+	(20180512)	物件陰影(有BUG)
 PCL
+	(未完成)	找第二種mesh
 
+---------------------------------------------------------------------------------------------------------
 PCD
 	尋找連續的點雲圖
 
 
 DataStructure
 	kdTree
-	vector
+	vector	(確認是否算是一種資料結構)
+	Queue
 Algorithm	
 	surface triangulation algorithm
 Sort
+	想辦法用到一個QQ
