--- a/file/進度.md
+++ b/file/進度.md
@@ -31,3 +31,25 @@ Algorithm
 
 Sort
 	想辦法用到一個QQ
+
+
+
+
+#include 
+#define
+
+main
+{
+	Enter file name
+	Check file
+
+	Convert to fastest data
+	Store to queue
+
+	Display
+}
+
+Display
+{
+	
+}
