--- a/file/進度.md
+++ b/file/進度.md
@@ -32,7 +32,7 @@ Algorithm
 Sort
 	想辦法用到一個QQ
 
-
+存圖片
 
 
 #include 
@@ -43,8 +43,7 @@ main
 	Enter file name
 	Check file
 
-	Convert to fastest data
-	Store to queue
+
 
 	Display
 }
