--- a/file/進度.md
+++ b/file/進度.md
@@ -35,6 +35,11 @@ Sort
 存圖片
 光源
 
+問題：
+	逐行執行不一邊顯示一邊載入
+	找不到連續的圖
+	自製的總是不能mesh
+
 https://blog.csdn.net/qq_35865125/article/details/79687350
 
 https://ifun01.com/BIDPFGC.html
