--- a/file/進度.md
+++ b/file/進度.md
@@ -1,11 +1,11 @@
 Queue
 	(20180512)	使用樣板的library		內建有了
-	(未完成)	結合queue及viewer
-	(未完成)	移除cloud和triangle的全域變數 形成triangle後丟置queue裡面
+	(20180518)	結合queue及viewer
+	(20180518)	移除cloud和triangle的全域變數 形成triangle後丟置queue裡面
 
 OpenGL	http://axdc11239.blogspot.tw/2012/03/opengl.html
-	Camera物件化
 	(未完成)	滑鼠選點
+	(20180515)	Camera物件化
 	(20180512)	可繪製pcl::PointCloud\<pcl::PointXYZ\>之function回傳void
 	(20180512)	可繪製pcl::PolygonMesh之functionc回傳void
 		(20180512)	傳入值去掉pcl::PointCloud\<pcl::PointXYZ\> pcl::PolygonMesh裡面有
@@ -16,9 +16,6 @@ OpenGL	http://axdc11239.blogspot.tw/2012/03/opengl.html
 
 PCL
 	(未完成)	找第二種mesh
-
-PCD
-	尋找連續的點雲圖
 
 
 DataStructure
