--- a/file/進度.md
+++ b/file/進度.md
@@ -1,43 +1,15 @@
-Queue
-	(20180512)	使用樣板的library		內建有了
-	(20180518)	結合queue及viewer
-	(20180518)	移除cloud和triangle的全域變數 形成triangle後丟置queue裡面
-
-OpenGL	http://axdc11239.blogspot.tw/2012/03/opengl.html
-	(未完成)	滑鼠選點
-	(20180515)	Camera物件化
-	(20180512)	可繪製pcl::PointCloud\<pcl::PointXYZ\>之function回傳void
-	(20180512)	可繪製pcl::PolygonMesh之functionc回傳void
-		(20180512)	傳入值去掉pcl::PointCloud\<pcl::PointXYZ\> pcl::PolygonMesh裡面有
-	(20180512)	滑鼠控制Camera		拖曳加滾輪
-	(20180511)	鍵盤控制Camera		WSAD ↑↓←→
-	(20180512)	固定文字
-	(20180512)	物件陰影(有BUG)
-
-PCL
-	(未完成)	找第二種mesh
-
-
 DataStructure
 	kdTree
-	vector	(確認是否算是一種資料結構)
+	vector
 	Queue
 
 Algorithm	
-	surface triangulation algorithm
+	GreedyProjectionTriangulation	surface reconstruct algorithm
+	Poission						surface reconstruct algorithm
 
 Sort
-	想辦法用到一個QQ
+	Quick sort
 
-存圖片
 光源
 
-問題：
-	逐行執行不一邊顯示一邊載入
-	找不到連續的圖
-	自製的總是不能mesh
-
-https://blog.csdn.net/qq_35865125/article/details/79687350
-
-https://ifun01.com/BIDPFGC.html
-
+http://www.pointclouds.org/assets/files/presentations/ICCV2011-recognition.pdf
